# agx

./: .claude  .gitmodules  AGENTS.md  BACKENDS.md  CLAUD.md  CLAUDE.md  CNAME  Cargo.toml  EXAMPLES.md  LICENSE-APACHE  LICENSE-MIT  README.md  USAGE.md  docs.html  index.html  install.sh  rust-toolchain.toml
.github/: CICD_SETUP.md  DEPLOYMENT_SUMMARY.md  TEMPLATE_FOR_AGX_AGW.md
.github/workflows/: add-to-roadmap.yml  ci.yml  claude.yml  pr-checks.yml  release-binaries.yml  release.yml
docs/: ARCHITECTURE.md  EXECUTION-LAYERS.md  JOB_SCHEMA.md  ROADMAP.md
scripts/: download-models.sh  install.sh
src/: agq_client.rs  cli.rs  executor.rs  input.rs  job.rs  lib.rs  logging.rs  main.rs  plan.rs  plan_buffer.rs  planner.rs  planner_old.rs  registry.rs  repl.rs
src/planner/: backend.rs  candle.rs  device.rs  mod.rs  ollama.rs  types.rs  wrapper.rs
