[package]
name = "agx"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"

[features]
default = ["metal"]
embedded-backend = ["llm", "rand"]
metal = ["candle-core/metal"]
cuda = ["candle-core/cuda"]
accelerate = ["candle-core/accelerate"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
llm = { version = "0.1", default-features = false, optional = true }
rand = { version = "0.8", optional = true }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
log = "0.4"

# Candle dependencies for local LLM inference
candle-core = { version = "0.9", default-features = false }
candle-transformers = "0.9"
candle-nn = "0.9"
tokenizers = "0.22"

# REPL dependencies
rustyline = "14"
dirs = "5"

[dev-dependencies]
tempfile = "3"

[profile.dev.package.ggml-sys]
opt-level = 3
